# CPPandas

./: CMakeLists.txt  README.md
cmake/: CPPandasConfig.cmake.in
docs/: Doxyfile.in
examples/: csv_benchmark.cpp  csv_simple_example.cpp  water_quality_example.cpp
github/workflows/: ci.yml
include/cppandas/: cppandas.hpp  csv.hpp
src/: cppandas.cpp  csv.cpp
